--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=cirestechnologies
+spring.datasource.url=jdbc:h2:mem:project1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.defer-datasource-initialization=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+server.port=9090
